2017-06-01  JJ Allaire  <jj@rstudio.com>

        * src/attributes.cpp: Fix registration for exports with name attribute.

2017-05-30  Dirk Eddelbuettel  <edd@debian.org>

        * inst/include/Rcpp/utils/tinyformat.h: Added missing newline

2017-05-23  JJ Allaire  <jj@rstudio.com>

        * R/Attributes.R: Execute tools::package_native_routine_registration_skeleton
          within package rather than current working directory.
        * src/attributes.cpp: Execute tools::package_native_routine_registration_skeleton
          within package rather than current working directory.

2017-05-22  Dirk Eddelbuettel  <edd@debian.org>

        * R/inline.R (Rcpp.plugin.maker): Whitespace changes

2017-05-20  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.12.11
        * inst/NEWS.Rd: Release 0.12.11
        * inst/bib/Rcpp.bib: Release 0.12.11
        * inst/include/Rcpp/config.h: Release 0.12.11

        * README.md: Updated counts for dependents and tests

        * debian/*: Changes for Debian release of 0.12.10

2017-05-19  Dirk Eddelbuettel  <edd@debian.org>

        * inst/NEWS.Rd: Removed one duplicate entry
        * inst/include/Rcpp/api/meat/Rcpp_eval.h (Rcpp): Minor whitespace changes

2017-05-18  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll Date and Version once more
        * inst/NEWS.Rd: Updated

        * R/Attributes.R (.plugins[["openmp"]]): Fix typo in comment

        * src/attributes.cpp (Rcpp): Use size_t (twice) to suppress nags from g++

2017-05-16  JJ Allaire  <jj@rstudio.com>

        * R/Attributes.R: Automatically generate native routine registrations.
        * src/attributes.cpp: Automatically generate native routine registrations.
        * R/Rcpp.package.skeleton.R: Don't generate native routines when creating
        a package using attributes.

2017-05-09  Dirk Eddelbuettel  <edd@debian.org>

        * R/Rcpp.package.skeleton.R (Rcpp.package.skeleton): Under R 3.4.0, run